update swagger and update profile
